# Tai

./: .gitignore  README.md  TaiLinearClassifier.py  TaiSpecialFeaturesTransformer.py  TaiXGBClassifier.py  install.sh  my_project.code-workspace  pyproject.toml  run_alzheimers_disease_experiment.sh  run_code_quality_experiment.sh  run_code_quality_visualization.sh  run_heart_cleveland_experiment.sh  run_heart_cleveland_visualization.sh
presentation/: presentation.html  presentation.md  tai.css
src/: TaiClassifier.py  TaiLinearClassifier.py  TaiSpecialFeaturesTransformer.py  experiment_auc.py
src/classifier_unit/: CatBoost.py  LogisticRegression.py  TFL.py  XGB.py  __init__.py
src/classifier_unit/_internal/: FitParams.py  InitBase.py  PredictProbaBase.py  Protocol.py
src/examples/alzheimers_disease/: main_experiment.py
src/examples/alzheimers_disease/data/: README.md
src/examples/code_quality/: CategoricalFeaturesUtils.py  config.py  main_app_predicition_lens.py  main_experiment.py
src/examples/code_quality/data/merged_data/: data.csv
src/examples/code_quality/models/: LogisticRegression.pkl  TaiClassifier.pkl  TaiXGBClassifier.pkl
src/examples/heart_cleveland/: main_app_predicition_lens.py  main_experiment.py
src/examples/heart_cleveland/data/: README.md
src/examples/heart_cleveland/models/: TaiClassifier_TFL.pkl
src/prediction_lens/: __init__.py  make_and_run_app.py
src/prediction_lens/assets/: tooltip.js
