[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tai"
requires-python = "==3.12.4"
version = "1.0"
dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "tensorflow==2.19.0",
    "tensorflow-lattice==2.1.1",
    "xgboost==3.0.0",
    "catboost==1.2.8",
    "pytest==8.3.5",
    "pydot==3.0.4",
    "seaborn==0.13.2",
    "plotly==6.0.1",
    "dash==3.0.4"
]

[project.optional-dependencies]
build = [
    "build>=1.2.2",
]
