[project]
name = "Tai"
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "tensorflow==2.19.0",
    "tensorflow-lattice==2.1.1",
    "xgboost==3.0.0",
    "catboost==1.2.8",
    "pytest==8.3.5",
    "pydot==3.0.4",
    "seaborn==0.13.2",
    "plotly==6.0.1",
    "dash==3.0.4",
]
